--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ title                    : "HomePage"
 title_separator          : #"-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://guoliangzhang1.github.io/guoliangz.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://bijingxue.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://guoliangzhang1.github.io/guoliangz.github.io"
+repository               : "https://bijingxue.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 
