--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,26 @@
 # Welcome to Jekyll!
-
 #
-
 # This config file is meant for settings that affect your entire site, values
-
 # which you are expected to set up once and rarely need to edit after that.
-
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
-
 # server process.
 
 # Basic Site Settings
-
 locale                   : "en-US"
 title                    : "HomePage"
 title_separator          : #"-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://bijingxue.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://guoliangzhang1.github.io/guoliangz.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://bijingxue.github.io"
+repository               : "https://guoliangzhang1.github.io/guoliangz.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
-
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
-
 #               Additional customization can be done by editing /_includes/author-profile.html
-
 author:
-
   # Biographic information
-
   avatar           : "bijingxue.png"
   name             : "毕京学(Jingxue Bi)"
   pronouns         : # example: "she/her"  
@@ -43,21 +31,14 @@ author:
   email            : "bijingxue19@sdjzu.edu.cn" 
 
   # Academic websites
-
   arxiv            : # URL - Update with the correct link to your profile
-
  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-
   impactstory      : # URL
-
 #  orcid            : "http://orcid.org/yourorcidurl"
-
  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-
  # researchgate     : # URL
 
   # Repositories and software development
-
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
@@ -66,9 +47,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-
 #  bluesky          : "bsky.app" # Replace this with you Bluesky username
-
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -95,7 +74,6 @@ author:
 
 
 # Site Settings
-
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -134,7 +112,6 @@ atom_feed:
 
 
 # SEO Related
-
 google_site_verification :
 bing_site_verification   :
 alexa_site_verification  :
@@ -142,7 +119,6 @@ yandex_site_verification :
 
 
 # Social Sharing
-
 twitter:
   username               : &twitter
 facebook:
@@ -150,11 +126,8 @@ facebook:
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
-
 # For specifying social profiles
-
 # - https://developers.google.com/structured-data/customize/social-profiles
-
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
@@ -162,7 +135,6 @@ social:
 
 
 # Analytics
-
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
@@ -170,13 +142,11 @@ analytics:
 
 
 # Reading Files
-
 include:
-
   - .htaccess
   - _pages
   - files
-    exclude:
+exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
   - .asset-cache
@@ -200,15 +170,14 @@ include:
   - package.json
   - tmp
   - vendor
-    keep_files:
+keep_files:
   - .git
   - .svn
-    encoding: "utf-8"
-    markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-
 markdown: kramdown
 highlighter: rouge
 lsi: false
@@ -217,7 +186,6 @@ incremental: false
 
 
 # Markdown Processing
-
 kramdown:
   input: GFM
   hard_wrap: false
@@ -230,7 +198,6 @@ kramdown:
 
 
 # Collections
-
 collections:
   teaching:
     output: true
@@ -247,14 +214,11 @@ collections:
 
 
 # Defaults
-
 defaults:
-
   # _posts
-
   - scope:
-    path: ""
-    type: posts
+      path: ""
+      type: posts
     values:
       layout: single
       author_profile: true
@@ -262,54 +226,44 @@ defaults:
       comments: true
       share: true
       related: true
-
   # _pages
-
   - scope:
-    path: ""
-    type: pages
+      path: ""
+      type: pages
     values:
       layout: single
       author_profile: true
-
   # _teaching
-
   - scope:
-    path: ""
-    type: teaching
+      path: ""
+      type: teaching
     values:
       layout: single
       author_profile: true
       share: true
       comments: true
-
   # _publications
-
   - scope:
-    path: ""
-    type: publications
+      path: ""
+      type: publications
     values:
       layout: single
       author_profile: true
       share: true
       comments: true
-
   # _portfolio
-
   - scope:
-    path: ""
-    type: portfolio
+      path: ""
+      type: portfolio
     values:
       layout: single
       author_profile: true
       share: true
       comment: true
-
   # _talks
-
   - scope:
-    path: ""
-    type: talks
+      path: ""
+      type: talks
     values:
       layout: talk
       author_profile: true
@@ -317,37 +271,27 @@ defaults:
 
 
 # Sass/SCSS
-
 sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 
 # Outputting
-
 permalink: /:categories/:title/
-
 # paginate: 5 # amount of posts to show
-
 # paginate_path: /page:num/
-
 timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
-
 plugins:
-
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
-
 # mimic GitHub Pages with --safe
-
 whitelist:
-
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
@@ -356,59 +300,36 @@ whitelist:
 
 
 # Archives
-
 #  Type
-
 #  - GitHub Pages compatible archive pages built with Liquid ~> type: liquid (default)
-
 #  - Jekyll Archives plugin archive pages ~> type: jekyll-archives
-
 #  Path (examples)
-
 #  - Archive page should exist at path when using Liquid method or you can
-
 #    expect broken links (especially with breadcrumbs enabled)
-
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
-
 #  - <base_path/categories/my-awesome-category/index.html ~> path: /categories/
-
 #  - <base_path/my-awesome-category/index.html ~> path: /
-
 category_archive:
   type: liquid
   path: /categories/
 tag_archive:
   type: liquid
   path: /tags/
-
 # https://github.com/jekyll/jekyll-archives
-
 # jekyll-archives:
-
 #   enabled:
-
 #     - categories
-
 #     - tags
-
 #   layouts:
-
 #     category: archive-taxonomy
-
 #     tag: archive-taxonomy
-
 #   permalinks:
-
 #     category: /categories/:name/
-
 #     tag: /tags/:name/
 
 
 # HTML Compression
-
 # - http://jch.penibelst.de/
-
 compress_html:
   clippings: all
   ignore:
