--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   tumblr           : # Username
   twitter          : # Username for X / Twitter
   vine             : # Username
-  weibo            :  "1730726637"
+  weibo            : #"1730726637"
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
