--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "毕京学"
+title                    : "毕京学 山东建筑大学 HomePage"
 title_separator          : #"-"
-name                     : &name "Your Name"
+name                     : &name "毕京学"
 description              : &description "personal description"
 url                      : https://bijingxue.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
