--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=UjLT4NAAAAAJ&hl=zh-CN"
   impactstory      : # URL
-#  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-2964-7698"
  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
- # researchgate     : # URL
+  researchgate     :  "https://www.researchgate.net/profile/Jingxue-Bi"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
